added spacing and image

--- a/style.css
+++ b/style.css
@@ -12,55 +12,18 @@ body {
 }
 
 /*images & media*/
-
-.tile-box {
-    width: 25%;
-    padding-bottom: 25%;
-    background: #00F;
-    color: #FFF;
-    position: relative;
-}
-
-.inner-tile-box {
-    position: absolute;
-    left: 0.1vw;
-    right: 0.1vw;
-    top: 0.1vw;
-    bottom: 0.1vw;
-    background: #66F;
-}
-
-.tile-image {
-    display: block;
-    height: auto;
-}
-
-.tile-overlay {
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: #008CBA;
-    overflow: hidden;
-    width: 100%;
-    height: 0;
-    transition: .5s ease;
-}
-
-.tile-container:hover .tile-overlay {
-    height: 100%;
-}
-
-.tile-text {
-    color: white;
-    font-size: 20px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-    text-align: center;
+.spacer-image{
+    background: url(/img/envision_land2.jpg) no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size:cover;
+    background-size: cover;
+    
+    display: flex;
+    align-items: center;
+    height: 40vw;
+    margin: 2vw;
+    border-radius: 0.3vw;
 }
 
 /*special styles / paddings / borders*/
